# nil

./: CONTRIBUTING.md  Cargo.toml  FORMAT.md  README.md
.cargo/: config.toml
.github/workflows/: release.yml  rust.yml
src/: abstract.rs  cli.rs  config.rs  files.rs  main.rs  minimessage_const.rs  rules.rs  ui.rs
templates/linux/: rules.txt
templates/macos/: rules.txt
templates/windows/: rules.txt
